Fix active scrollbar thumb color

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -422,6 +422,10 @@ body.layout-multiple-columns {
   box-shadow: 2px 4px 15px rgba(0, 0, 0, .2);
 }
 
+.layout-multiple-columns .drawer__inner__mastodon {
+  background-color: var(--color-bg);
+}
+
 .layout-multiple-columns .list-editor__search .search__icon .fa {
   margin: 15px;
 }
@@ -3207,7 +3211,8 @@ body.embed .entry .detailed-status {
 .layout-multiple-columns textarea::-webkit-scrollbar,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar,
-.layout-multiple-columns::-webkit-scrollbar {
+.layout-multiple-columns::-webkit-scrollbar,
+.layout-multiple-columns .scrollable::-webkit-scrollbar {
   height: 6px;
   width: 6px;
 }
@@ -3215,7 +3220,8 @@ body.embed .entry .detailed-status {
 .layout-multiple-columns textarea::-webkit-scrollbar-thumb,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-thumb,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-thumb,
-.layout-multiple-columns::-webkit-scrollbar-thumb {
+.layout-multiple-columns::-webkit-scrollbar-thumb,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-thumb {
   background-color: var(--color-border);
   border: 0px solid var(--color-border);
   border-radius: 50px;
@@ -3224,21 +3230,24 @@ body.embed .entry .detailed-status {
 .layout-multiple-columns textarea::-webkit-scrollbar-thumb:hover,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-thumb:hover,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-thumb:hover,
-.layout-multiple-columns::-webkit-scrollbar-thumb:hover {
+.layout-multiple-columns::-webkit-scrollbar-thumb:hover,
+.layout-multiple-columns .scrollable:-webkit-scrollbar-thumb:hover {
   background-color: var(--color-light-purple);
 }
 
 .layout-multiple-columns textarea::-webkit-scrollbar-thumb:active,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-thumb:active,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-thumb:active,
-.layout-multiple-columns::-webkit-scrollbar-thumb:active {
-  background-color: var(--color-bg);
+.layout-multiple-columns::-webkit-scrollbar-thumb:active,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-thumb:active {
+  background-color: var(--color-black-coral);
 }
 
 .layout-multiple-columns textarea::-webkit-scrollbar-track,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-track,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-track,
-.layout-multiple-columns::-webkit-scrollbar-track {
+.layout-multiple-columns::-webkit-scrollbar-track,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-track {
   background-color: var(--color-bg);
   border: 0px solid var(--color-border);
   border-radius: 0;
@@ -3247,21 +3256,24 @@ body.embed .entry .detailed-status {
 .layout-multiple-columns textarea::-webkit-scrollbar-track:hover,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-track:hover,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-track:hover,
-.layout-multiple-columns::-webkit-scrollbar-track:hover {
+.layout-multiple-columns::-webkit-scrollbar-track:hover,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-track:hover {
   background-color: var(--color-bg);
 }
 
 .layout-multiple-columns textarea::-webkit-scrollbar-track:active,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-track:active,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-track:active,
-.layout-multiple-columns::-webkit-scrollbar-track:active {
+.layout-multiple-columns::-webkit-scrollbar-track:active,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-track:active {
   background-color: var(--color-bg);
 }
 
 .layout-multiple-columns textarea::-webkit-scrollbar-corner,
 .layout-multiple-columns .autosuggest-textarea__textarea::-webkit-scrollbar-corner,
 .layout-multiple-columns .reply-indicator::-webkit-scrollbar-corner,
-.layout-multiple-columns::-webkit-scrollbar-corner {
+.layout-multiple-columns::-webkit-scrollbar-corner,
+.layout-multiple-columns .scrollable::-webkit-scrollbar-corner {
   background-color: transparent;
 }
 
